@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1026 2023/11/13 23:47:37 wiz Exp $
+# $NetBSD: Makefile,v 1.1027 2023/11/14 01:05:01 wiz Exp $
 #
 
 COMMENT=	Graphics tools and libraries
@@ -338,7 +338,6 @@ SUBDIR+=	libgii
 SUBDIR+=	libgiigic
 SUBDIR+=	libgltf
 SUBDIR+=	libgnomecanvas
-SUBDIR+=	libgnomecanvasmm
 SUBDIR+=	libheif
 SUBDIR+=	libhighway
 SUBDIR+=	libimagequant
