@@ -1,42 +1,0 @@
-@comment $NetBSD: PLIST,v 1.2 2009/06/14 17:59:21 joerg Exp $
-include/libgnomecanvasmm-2.6/libgnomecanvasmm.h
-include/libgnomecanvasmm-2.6/libgnomecanvasmm/affinetrans.h
-include/libgnomecanvasmm-2.6/libgnomecanvasmm/bpath.h
-include/libgnomecanvasmm-2.6/libgnomecanvasmm/canvas.h
-include/libgnomecanvasmm-2.6/libgnomecanvasmm/ellipse.h
-include/libgnomecanvasmm-2.6/libgnomecanvasmm/group.h
-include/libgnomecanvasmm-2.6/libgnomecanvasmm/init.h
-include/libgnomecanvasmm-2.6/libgnomecanvasmm/item.h
-include/libgnomecanvasmm-2.6/libgnomecanvasmm/line.h
-include/libgnomecanvasmm-2.6/libgnomecanvasmm/path-def.h
-include/libgnomecanvasmm-2.6/libgnomecanvasmm/pixbuf.h
-include/libgnomecanvasmm-2.6/libgnomecanvasmm/point.h
-include/libgnomecanvasmm-2.6/libgnomecanvasmm/polygon.h
-include/libgnomecanvasmm-2.6/libgnomecanvasmm/private/bpath_p.h
-include/libgnomecanvasmm-2.6/libgnomecanvasmm/private/canvas_p.h
-include/libgnomecanvasmm-2.6/libgnomecanvasmm/private/ellipse_p.h
-include/libgnomecanvasmm-2.6/libgnomecanvasmm/private/group_p.h
-include/libgnomecanvasmm-2.6/libgnomecanvasmm/private/item_p.h
-include/libgnomecanvasmm-2.6/libgnomecanvasmm/private/line_p.h
-include/libgnomecanvasmm-2.6/libgnomecanvasmm/private/path-def_p.h
-include/libgnomecanvasmm-2.6/libgnomecanvasmm/private/pixbuf_p.h
-include/libgnomecanvasmm-2.6/libgnomecanvasmm/private/polygon_p.h
-include/libgnomecanvasmm-2.6/libgnomecanvasmm/private/rect-ellipse_p.h
-include/libgnomecanvasmm-2.6/libgnomecanvasmm/private/rect_p.h
-include/libgnomecanvasmm-2.6/libgnomecanvasmm/private/rich-text_p.h
-include/libgnomecanvasmm-2.6/libgnomecanvasmm/private/shape_p.h
-include/libgnomecanvasmm-2.6/libgnomecanvasmm/private/text_p.h
-include/libgnomecanvasmm-2.6/libgnomecanvasmm/private/widget_p.h
-include/libgnomecanvasmm-2.6/libgnomecanvasmm/properties.h
-include/libgnomecanvasmm-2.6/libgnomecanvasmm/rect-ellipse.h
-include/libgnomecanvasmm-2.6/libgnomecanvasmm/rect.h
-include/libgnomecanvasmm-2.6/libgnomecanvasmm/rich-text.h
-include/libgnomecanvasmm-2.6/libgnomecanvasmm/shape.h
-include/libgnomecanvasmm-2.6/libgnomecanvasmm/text.h
-include/libgnomecanvasmm-2.6/libgnomecanvasmm/widget.h
-include/libgnomecanvasmm-2.6/libgnomecanvasmm/wrap_init.h
-lib/libgnomecanvasmm-2.6.la
-lib/libgnomecanvasmm-2.6/include/libgnomecanvasmmconfig.h
-lib/libgnomecanvasmm-2.6/proc/m4/convert.m4
-lib/libgnomecanvasmm-2.6/proc/m4/convert_libgnomecanvasmm.m4
-lib/pkgconfig/libgnomecanvasmm-2.6.pc
