@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.11 2021/10/26 10:46:27 nia Exp $
-
-BLAKE2s (libgnomecanvasmm-2.26.0.tar.bz2) = dd3f2495944c9697f73f00097e8d9576a55467e626ebd4b12cafa3be21bcab0b
-SHA512 (libgnomecanvasmm-2.26.0.tar.bz2) = 23795c856674b79f82d2e5cffdfdbf67a387fe6a21081fef1d96d0f614a121710c7f1e175612a286f5946a60cea4e8506aef7833a7bdf73084d6266c09aad66b
-Size (libgnomecanvasmm-2.26.0.tar.bz2) = 327215 bytes
